--- a/Go/Go/Go.csproj
+++ b/Go/Go/Go.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8263010C-53D4-4C4A-A714-7D850CD0C8BD}</ProjectGuid>
+    <ProjectGuid>{E5F6C7ED-01DF-4C5D-A57B-8274EA546C4A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Parser_SGF</RootNamespace>
-    <AssemblyName>Parser_SGF</AssemblyName>
+    <RootNamespace>Go</RootNamespace>
+    <AssemblyName>Go</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,9 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GoLogic.cs" />
-    <Compile Include="ParserSGF.cs" />
+    <Compile Include="Coordinate.cs" />
+    <Compile Include="GobanLogic.cs" />
+    <Compile Include="GoEngine.cs" />
+    <Compile Include="GoMove.cs" />
+    <Compile Include="GoStone.cs" />
     <Compile Include="NodeSGF.cs" />
+    <Compile Include="ParserSGF.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TreeSGF.cs" />
   </ItemGroup>
